# bevy_editor_pls

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
crates/bevy_editor_pls/: Cargo.toml
crates/bevy_editor_pls/examples/: 2d_3d_mixed.rs  basic.rs  breakout.rs  controls.rs  empty.rs  load_gltf.rs  separate_window.rs  ui.rs
crates/bevy_editor_pls/src/: controls.rs  lib.rs
crates/bevy_editor_pls_core/: Cargo.toml
crates/bevy_editor_pls_core/src/: drag_and_drop.rs  editor.rs  editor_window.rs  lib.rs  widgets.rs
crates/bevy_editor_pls_core/src/widgets/: selectable.rs
crates/bevy_editor_pls_default_windows/: Cargo.toml
crates/bevy_editor_pls_default_windows/src/: add.rs  assets.rs  console_log.rs  debug_settings.rs  diagnostics.rs  gizmos.rs  hierarchy.rs  inspector.rs  lib.rs  renderer.rs  resources.rs  scenes.rs  windows.rs
crates/bevy_editor_pls_default_windows/src/cameras/: camera_2d_panzoom.rs  camera_3d_free.rs  camera_3d_panorbit.rs  editor_cam_controls.rs  editor_cam_render.rs  mod.rs  persistent_active_cameras.rs
crates/bevy_editor_pls_default_windows/src/console_log/: console.rs  logs.rs
crates/bevy_editor_pls_default_windows/src/debug_settings/: debugdump.rs  fake_time.rs  mod.rs
crates/bevy_editor_pls_default_windows/src/hierarchy/: mod.rs  picking.rs
examples/: main.rs  spawn.rs  two_windows.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
scripts/: publish.sh
src/: action.rs  drag_and_drop.rs  editor_settings.rs  lib.rs  plugin.rs  second_window_plugin.rs  systems.rs  ui.rs  utils.rs
src/extensions/: mod.rs  spawn.rs
