[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jakobhellermann/bevy_editor_pls"
description = "In-App editor tools for bevy apps"
readme = "README.md"

[workspace.dependencies]
bevy_editor_pls = { version = "0.9.0", path = "crates/bevy_editor_pls" }
bevy_editor_pls_core = { version = "0.9.0", path = "crates/bevy_editor_pls_core" }
bevy_editor_pls_default_windows = { version = "0.9.0", path = "crates/bevy_editor_pls_default_windows" }

bevy-inspector-egui = "0.26.0"
egui = "0.28"
egui_dock = "0.13"
# used to be egui-gizmo 0.16
transform-gizmo-bevy = "0.3"

[profile.dev.package."*"]
opt-level = 2
