[package]
name = "bevy_editor_pls"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/jakobhellermann/bevy_editor_pls"
description = "In-App editor tools for bevy apps"
keywords = ["bevy", "editor"]
categories = ["game-development", "gui", "visualization"]
exclude = ["assets"]

[features]
default_windows = ["bevy_editor_pls_default_windows", "bevy/bevy_render", "bevy/bevy_pbr"]
highlight_changes = ["bevy_editor_pls_default_windows/highlight_changes"]
default = ["default_windows"]

[dependencies]
bevy = { version = "0.10", default-features = false, features = ["x11"] }
egui = "0.21.0"
bevy_editor_pls_core = { version = "0.3", path = "../bevy_editor_pls_core" }
bevy_editor_pls_default_windows = { version = "0.3", path = "../bevy_editor_pls_default_windows", optional = true }
# bevy_framepace = { version = "0.11", default-features = false }

[dev-dependencies]
bevy = { version = "0.10", default-features = false, features = [
    "bevy_winit",
    "x11",
] }

[[example]]
name = "load_gltf"
required-features = ["bevy/bevy_gltf", "bevy/png", "bevy/ktx2"]
