[package]
name = "bevy_editor_pls"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
keywords = ["bevy", "editor"]
categories = ["game-development", "gui", "visualization"]
exclude = ["assets"]

[features]
default_windows = [
    "bevy_editor_pls_default_windows",
    "bevy/bevy_render",
    "bevy/bevy_pbr",
]
highlight_changes = ["bevy_editor_pls_default_windows/highlight_changes"]
default = ["default_windows"]

[dependencies]
bevy_editor_pls_core.workspace = true
bevy_editor_pls_default_windows = { workspace = true, optional = true }
bevy = { version = "0.11", default-features = false, features = ["x11"] }
egui.workspace = true
egui-gizmo = "0.11.0"

[dev-dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "x11",
] }

[[example]]
name = "load_gltf"
required-features = ["bevy/bevy_gltf", "bevy/png", "bevy/ktx2"]
