[package]
name = "bevy_editor_pls_core"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jakobhellermann/bevy_editor_pls"
description = "In-App editor tools for bevy apps"

[features]
viewport = []

[dependencies]
bevy = { version = "0.9", default-features = false }
bevy-inspector-egui = "0.16.0-pre.2"
indexmap = "1.7"
egui_dock = "0.3"
