[package]
name = "bevy_editor_pls_core"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jakobhellermann/bevy_editor_pls"
description = "In-App editor tools for bevy apps"

[dependencies]
bevy = { version = "0.10", default-features = false }
bevy-inspector-egui = { version = "0.18", default-features = false, features = ["bevy_pbr"] }
indexmap = "1.7"
egui_dock = "0.4"
