[package]
name = "bevy_editor_pls_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
bevy = { version = "0.10", default-features = false }
bevy-inspector-egui.workspace = true
indexmap = "1.7"
egui_dock = "0.4"
