[package]
name = "bevy_editor_pls_default_windows"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[features]
highlight_changes = ["bevy-inspector-egui/highlight_changes"]

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "bevy_scene",
    "bevy_text",
    "bevy_ui",
    "bevy_sprite",
    "bevy_pbr",
    "bevy_core_pipeline",
] }
bevy_editor_pls_core.workspace = true
bevy-inspector-egui.workspace = true
# bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking", rev = "7a9ffd020b530acef25c8cf8bc9475b7a13bd353", default-features = false, features = [
#     "backend_raycast",
#     "backend_egui",
#     "backend_sprite",
#     "backend_bevy_ui",
# ] }
indexmap = "2"
pretty-type-name = "1.0"
bevy_mod_debugdump = "0.8"
opener = "0.5.0"
egui-gizmo = "0.11.0"
